// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App default 1`] = `
<div
  className="view"
>
  <div
    className="body"
  >
    <label
      htmlFor="userNameInput"
    >
      Name:
      <input
        onChange={[Function]}
        type="text"
      />
    </label>
    <br />
    <button
      onClick={[Function]}
      type="submit"
    >
      Login
    </button>
  </div>
</div>
`;

exports[`Storyshots App shows ChatView after login 1`] = `
<div
  className="view"
>
  <div
    className="body"
  >
    <div
      className="center"
    >
      <div
        className="view"
      >
        <div />
      </div>
    </div>
    <div
      className="right"
    >
      <div>
        <ul
          className="list"
        >
          <li
            data-id="Robot"
            onClick={[Function]}
          >
            Robot
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="footer"
  >
    <div
      className="view"
    >
      <input
        className="input"
        onChange={[Function]}
        type="text"
        value=""
      />
      <div
        className="btn"
      >
        <button
          onClick={[Function]}
          type="submit"
        >
          Enter
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Emoji 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button Text 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  Hello Button
</button>
`;

exports[`Storyshots ChatHistoryView default 1`] = `
<div
  className="view"
>
  <div />
</div>
`;

exports[`Storyshots ChatHistoryView show user message 1`] = `
<div
  className="view"
>
  <div>
    <p>
      Mary says "Hahah"
    </p>
  </div>
  <div />
</div>
`;

exports[`Storyshots ChatHistoryView shows a message in the view 1`] = `
<div
  style={
    Object {
      "height": 200,
      "outlineStyle": "solid",
      "width": 300,
    }
  }
>
  <div
    className="view"
  >
    <div>
      <p>
        Tom says "Scroll"
      </p>
    </div>
    <div />
  </div>
</div>
`;

exports[`Storyshots ChatHistoryView shows enough chats off the view 1`] = `
<div
  style={
    Object {
      "height": 200,
      "outlineStyle": "solid",
      "width": 300,
    }
  }
>
  <div
    className="view"
  >
    <div>
      <p>
        Mary says "Scroll 9"
      </p>
    </div>
    <div>
      <p>
        Mary says "Scroll 8"
      </p>
    </div>
    <div>
      <p>
        Mary says "Scroll 7"
      </p>
    </div>
    <div>
      <p>
        Mary says "Scroll 6"
      </p>
    </div>
    <div>
      <p>
        Mary says "Scroll 5"
      </p>
    </div>
    <div>
      <p>
        Mary says "Scroll 4"
      </p>
    </div>
    <div>
      <p>
        Tom says "Scroll 3"
      </p>
    </div>
    <div>
      <p>
        Tom says "Scroll 2"
      </p>
    </div>
    <div>
      <p>
        Tom says "Scroll 1"
      </p>
    </div>
    <div />
  </div>
</div>
`;

exports[`Storyshots ChatHistoryView shows join message 1`] = `
<div
  className="view"
>
  <div>
    <p>
      Mary has joined
    </p>
  </div>
  <div />
</div>
`;

exports[`Storyshots ChatHistoryView shows welcome message 1`] = `
<div
  className="view"
>
  <div>
    <p>
      Welcome, Mary. You have 0 messages
    </p>
  </div>
  <div />
</div>
`;

exports[`Storyshots ChatHistoryView shows welcome/join/user messages 1`] = `
<div
  className="view"
>
  <div>
    <p>
      Mary says "Hi Tom"
    </p>
  </div>
  <div>
    <p>
      Tom says "Hi"
    </p>
  </div>
  <div>
    <p>
      Tom has joined
    </p>
  </div>
  <div>
    <p>
      Welcome, Mary. You have 0 messages
    </p>
  </div>
  <div />
</div>
`;

exports[`Storyshots ChatInputView default 1`] = `
<div
  className="view"
>
  <input
    className="input"
    onChange={[Function]}
    type="text"
    value=""
  />
  <div
    className="btn"
  >
    <button
      onClick={[Function]}
      type="submit"
    >
      Enter
    </button>
  </div>
</div>
`;

exports[`Storyshots ChatInputView shows input text 1`] = `
<div
  className="view"
>
  <input
    className="input"
    onChange={[Function]}
    type="text"
    value="Hello"
  />
  <div
    className="btn"
  >
    <button
      onClick={[Function]}
      type="submit"
    >
      Enter
    </button>
  </div>
</div>
`;

exports[`Storyshots ChatUserListView default 1`] = `
<div>
  <ul
    className="list"
  />
</div>
`;

exports[`Storyshots ChatUserListView show users including me 1`] = `
<div>
  <ul
    className="list"
  >
    <li
      data-id="Mary"
      onClick={[Function]}
    >
      Mary
    </li>
    <li
      data-id="Tom"
      onClick={[Function]}
    >
      Me
    </li>
  </ul>
</div>
`;

exports[`Storyshots ChatUserListView shows users 1`] = `
<div>
  <ul
    className="list"
  >
    <li
      data-id="Mary"
      onClick={[Function]}
    >
      Mary
    </li>
    <li
      data-id="Tom"
      onClick={[Function]}
    >
      Tom
    </li>
  </ul>
</div>
`;

exports[`Storyshots ChatView default 1`] = `
<div
  className="view"
>
  <div
    className="body"
  >
    <div
      className="center"
    >
      <div
        className="view"
      >
        <div />
      </div>
    </div>
    <div
      className="right"
    >
      <div>
        <ul
          className="list"
        >
          <li
            data-id="Mary"
            onClick={[Function]}
          >
            Me
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="footer"
  >
    <div
      className="view"
    >
      <input
        className="input"
        onChange={[Function]}
        type="text"
        value=""
      />
      <div
        className="btn"
      >
        <button
          onClick={[Function]}
          type="submit"
        >
          Enter
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ChatView shows multiple chats with users 1`] = `
<div
  className="view"
>
  <div
    className="body"
  >
    <div
      className="center"
    >
      <div
        className="view"
      >
        <div>
          <p>
            Mary says "Hi Tom"
          </p>
        </div>
        <div>
          <p>
            Tom says "Hi"
          </p>
        </div>
        <div>
          <p>
            Tom has joined
          </p>
        </div>
        <div>
          <p>
            Welcome, Mary. You have 0 messages
          </p>
        </div>
        <div />
      </div>
    </div>
    <div
      className="right"
    >
      <div>
        <ul
          className="list"
        >
          <li
            data-id="Tom"
            onClick={[Function]}
          >
            Tom
          </li>
          <li
            data-id="Paul"
            onClick={[Function]}
          >
            Paul
          </li>
          <li
            data-id="Mary"
            onClick={[Function]}
          >
            Me
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="footer"
  >
    <div
      className="view"
    >
      <input
        className="input"
        onChange={[Function]}
        type="text"
        value=""
      />
      <div
        className="btn"
      >
        <button
          onClick={[Function]}
          type="submit"
        >
          Enter
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots JoinMessage default 1`] = `
<div>
  <p>
    Mary has joined
  </p>
</div>
`;

exports[`Storyshots LoginView default 1`] = `
<div
  className="view"
>
  <div
    className="body"
  >
    <label
      htmlFor="userNameInput"
    >
      Name:
      <input
        onChange={[Function]}
        type="text"
      />
    </label>
    <br />
    <button
      onClick={[Function]}
      type="submit"
    >
      Login
    </button>
  </div>
</div>
`;

exports[`Storyshots UserInfoView default 1`] = `
<div
  className="view"
>
  <div
    className="body"
  >
    <label
      htmlFor="userNameInput"
    >
      Name:
      <input
        disabled={null}
        onChange={[Function]}
        type="text"
        value="Mary"
      />
    </label>
    <br />
    <button
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Storyshots UserInfoView show user but not editable 1`] = `
<div
  className="view"
>
  <div
    className="body"
  >
    <label
      htmlFor="userNameInput"
    >
      Name:
      <input
        disabled="disabled"
        onChange={[Function]}
        type="text"
        value="Mary"
      />
    </label>
    <br />
    <button
      onClick={[Function]}
      type="submit"
    >
      Back
    </button>
  </div>
</div>
`;

exports[`Storyshots UserMessage default 1`] = `
<div>
  <p>
    Mary says "Hi Everyone!"
  </p>
</div>
`;

exports[`Storyshots UserMessage show my message 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column"
  >
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <p
        className="MuiTypography-root makeStyles-user-1464 MuiTypography-body1 MuiTypography-colorTextSecondary"
      >
        Mary
      </p>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-1462 MuiPaper-rounded"
        >
          <div
            className="MuiCardContent-root"
          >
            <p
              className="MuiTypography-root makeStyles-text-1463 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
            >
              Hi Everyone!
            </p>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots UserMessage show other user message 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column"
  >
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <p
        className="MuiTypography-root makeStyles-user-1629 MuiTypography-body1 MuiTypography-colorTextSecondary"
      >
        Mary
      </p>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-1627 MuiPaper-rounded"
        >
          <div
            className="MuiCardContent-root"
          >
            <p
              className="MuiTypography-root makeStyles-text-1628 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
            >
              Hi Everyone!
            </p>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots UserMessage smile 1`] = `
<div>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <circle
      cx="15.5"
      cy="9.5"
      r="1.5"
    />
    <circle
      cx="8.5"
      cy="9.5"
      r="1.5"
    />
    <path
      d="M12 18c2.28 0 4.22-1.66 5-4H7c.78 2.34 2.72 4 5 4z"
    />
    <path
      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
  </svg>
</div>
`;

exports[`Storyshots Welcome To Storybook 1`] = `
<article
  style={
    Object {
      "backgroundColor": "#fff",
      "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
      "lineHeight": 1.4,
      "padding": 15,
    }
  }
>
  <h1>
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottom": "1px solid #1474f3",
          "borderLeft": "none",
          "borderRight": "none",
          "borderTop": "none",
          "color": "#1474f3",
          "cursor": "pointer",
          "font": "inherit",
          "padding": 0,
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      type="button"
    >
      stories
    </button>
     for a component called
     
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
     stories located at
     
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      style={
        Object {
          "borderBottom": "1px solid #1474f3",
          "color": "#1474f3",
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    style={
      Object {
        "opacity": 0.5,
      }
    }
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;

exports[`Storyshots WelcomeMessage default 1`] = `
<div>
  <p>
    Welcome, Mary. You have 0 messages
  </p>
</div>
`;

exports[`Storyshots WelcomeMessage shows welcome message with unread messages 1`] = `
<div>
  <p>
    Welcome, Mary. You have 1 messages
  </p>
</div>
`;
